--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -1,4 +1,4 @@
-@Article{Aiyagari1994,
+﻿@Article{Aiyagari1994,
   author = {Aiyagari, S Rao},
   title = {Uninsured Idiosyncratic Risk and Aggregate Saving},
   journal = {The Quarterly Journal of Economics},
@@ -2037,6 +2037,16 @@ url  =  {http://EconPapers.repec.org/RePEc:bin:bpeajo:v:44:y:2012:i:2012-01:p:29
   volume = {18},
   number = {1},
   pages = {83-114}
+}
+
+@incollection{ModiglianiBrumberg1954,
+  author      = {Modigliano, Franco and Brumberg, Richard},
+  title       = {Utility Analysis and the Consumption Function: An Interpretation of Cross-Section Data},
+  editor      = {Kurihara, K.},
+  booktitle   = {Post Keynesian Economics},
+  publisher   = {Rutgers University Press},
+  address     = {New Brunswick},
+  year        = {1954}
 }
 
 
