--- a/main file.tex
+++ b/main file.tex
@@ -179,7 +179,7 @@
 
 \chapter{Models of the wealth distribution} %\label{chap:atsm} 
 \markboth{\MakeUppercase{\thechapter. WEALTH DISTRIBUTION MODELS}}{WEALTH DISTRIBUTION MODELS} 
-\include{chapter1/chapter1} %directory and name of file that contains the contant of the chapter
+\include{Chapter1/chapter1} %directory and name of file that contains the contant of the chapter
 
 \chapter{The implications of learning about income processes in the face of structural breaks for the household wealth distribution} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
 \include{chapter2/chapter2}
