Lots of changes
- Change font to charter
- Insert chapter 2, estimating RIP and HIP processes
- Rewrite chapter 1 to be a literature review

--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -1,4 +1,20 @@
-﻿@Article{Aiyagari1994,
+﻿@Article{AbowdCard89,
+  author={Abowd, John M and Card, David},
+  title={{Intertemporal Labor Supply and Long-term Employment Contracts}},
+  journal={American Economic Review},
+  year=1987,
+  volume={77},
+  number={1},
+  pages={50-68},
+  month={March},
+  keywords={},
+  abstract={ The authors compare the implications of a symmetric information contracting model and a dynamic labor supply model for changes in earnings and hours. A simple test is whether earnings changes are more variable than hours changes, as predicted by the labor supply model, or less variable, as predicted by the contracting model. The authors apply this test to two longitudinal surveys of adult men and find that earnings are somewhat more variable than hours for men who never change employers. The estimates suggest that changes in earnings and hours not associated with survey measurement error occur at fixed wage rates. Copyright 1987 by American Economic Association.},
+  url={http://ideas.repec.org/a/aea/aecrev/v77y1987i1p50-68.html}
+}
+
+
+
+@Article{Aiyagari1994,
   author = {Aiyagari, S Rao},
   title = {Uninsured Idiosyncratic Risk and Aggregate Saving},
   journal = {The Quarterly Journal of Economics},
@@ -263,6 +279,22 @@
   abstract = { A recent \&quot;revisionist\&quot; literature characterizes the pronounced rise in U.S. wage inequality since 1980 as an \&quot;episodic\&quot; event of the first half of the 1980s driven by nonmarket factors (particularly a falling real minimum wage) and concludes that continued increases in wage inequality since the late 1980s substantially reflect the mechanical confounding effects of changes in labor force composition. Analyzing data from the Current Population Survey for 1963 to 2005, we find limited support for these claims. The slowing of the growth of overall wage inequality in the 1990s hides a divergence in the paths of upper-tail (90/50) inequality-which has increased steadily since 1980, even adjusting for changes in labor force composition-and lower-tail (50/10) inequality, which rose sharply in the first half of the 1980s and plateaued or contracted thereafter. Fluctuations in the real minimum wage are not a plausible explanation for these trends since the bulk of inequality growth occurs above the median of the wage distribution. Models emphasizing rapid secular growth in the relative demand for skills-attributable to skill-biased technical change-and a sharp deceleration in the relative supply of college workers in the 1980s do an excellent job of capturing the evolution of the college/high school wage premium over four decades. But these models also imply a puzzling deceleration in relative demand growth for college workers in the early 1990s, also visible in a recent \&quot;polarization\&quot; of skill demands in which employment has expanded in high-wage and low-wage work at the expense of middle-wage jobs. These patterns are potentially reconciled by a modified version of the skill-biased technical change hypothesis that emphasizes the role of information technology in complementing abstract (high-education) tasks and substituting for routine (middle-education) tasks. Copyright by the President and Fellows of Harvard College and the Massachusetts Inst},
   url = {http://ideas.repec.org/a/tpr/restat/v90y2008i2p300-323.html}
 }
+
+@Article{Baker98,
+  author={Baker, Michael},
+  title={{Growth-Rate Heterogeneity and the Covariance Structure of Life-Cycle Earnings}},
+  journal={Journal of Labor Economics},
+  year=1997,
+  volume={15},
+  number={2},
+  pages={338-75},
+  month={April},
+  keywords={},
+  abstract={ Using U.S. panel data on adult males, the author compares the 'profile heterogeneity model' of earnings dynamics, in which the earnings-experience profile varies across individuals, to a competing model in which earnings 'has a unit root.' The latter specification enjoys increasing popularity among researchers. The author's analysis questions this favor, suggesting the profile heterogeneity model provides a more consistent representation of the data. He also provides new estimates of the variation in earnings growth rates. Previous evidence is from relatively unrepresentative samples. Individuals one standard deviation above the mean enjoy a 20-30 percent earnings advantage in just ten years. Copyright 1997 by University of Chicago Press.},
+  url={http://ideas.repec.org/a/ucp/jlabec/v15y1997i2p338-75.html}
+}
+
+
 
 
 @TechReport{Baker2014,
@@ -1293,6 +1325,15 @@ url  =  {http://EconPapers.repec.org/RePEc:bin:bpeajo:v:44:y:2012:i:2012-01:p:29
 }
 
 
+@BOOK{Friedman1957,
+title = {A Theory of the Consumption Function},
+author = {Friedman, Milton},
+year = {1957},
+publisher = {National Bureau of Economic Research, Inc},
+url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
+}
+
+
 @Article{GabaixLandier2008,
   author={Xavier Gabaix and Augustin Landier},
   title={{Why Has CEO Pay Increased So Much?}},
@@ -1862,6 +1903,16 @@ url  =  {http://EconPapers.repec.org/RePEc:bin:bpeajo:v:44:y:2012:i:2012-01:p:29
   keywords={Progressive Taxation; Top 1\%; Social Insurance; Income Inequality},
 }
 
+@Misc{Kohler2015,
+  author={Ulrich Kohler},
+  title={{PSIDTOOLS: Stata module to facilitate access to Panel Study of Income Dynamics (PSID)}},
+  year=2015,
+  month=Jan,
+  howpublished={Statistical Software Components, Boston College Department of Economics},
+  abstract={psid is an interface to the \&quot;Panel Study of Income Dynamics\&quot; (PSID) and to the American branch of the \&quot;Cross National Equivalence File\&quot; (CNEF).},
+  keywords={PSID; data management},
+  url={http://ideas.repec.org/c/boc/bocode/s457951.html},
+}
 
 
 @Article{KopczukSaezSong2010,
@@ -2111,6 +2162,13 @@ url  =  {http://EconPapers.repec.org/RePEc:bin:bpeajo:v:44:y:2012:i:2012-01:p:29
   url={http://ideas.repec.org/a/oup/qjecon/v126y2011i3p1071-1131.html}
 }
 
+
+@book{Piketty2014,
+  author={Thomas Piketty},
+  title={Capital in the 21st Century},
+  publisher={Harvard University Press},
+  year={2014}
+}
 
 @Article{PikettySaez2003,
   author = {Thomas Piketty and Emmanuel Saez},
