--- a/main file.tex
+++ b/main file.tex
@@ -1,7 +1,5 @@
+\RequirePackage{setspace}
 \documentclass[oneside,12pt,a4paper]{Classes/CUEDthesisPSnPDF}
-\usepackage{hyperref} 
-\usepackage{url}
-\urlstyle{same}
 \usepackage{longtable}
 \usepackage{lscape}
 \usepackage{amssymb}
@@ -19,103 +17,36 @@
 \usepackage[capposition=top]{floatrow}
 \usepackage{color, colortbl}
 \usepackage{lscape}
-
 \usepackage{ragged2e}
 \geometry{left=4.0cm,right=2cm}
-
 \usepackage{pdfpages}
-
 \usepackage{chngcntr} 
 \counterwithout{footnote}{chapter}
-
-% Define theorem-like commands and a few random function names.
-\theoremstyle{plain}
-\newtheorem{thm}{Theorem}[chapter] % reset theorem numbering for each chapter
-\newtheorem{theorem}{Theorem}[chapter]
-\newtheorem{acknowledgement}{Acknowledgement}
-\newtheorem{algorithm}[theorem]{Algorithm}
-\newtheorem{axiom}[theorem]{Axiom}
-\newtheorem{case}[theorem]{Case}
-\newtheorem{claim}[theorem]{Claim}
-\newtheorem{conclusion}[theorem]{Conclusion}
-\newtheorem{condition}[theorem]{Condition}
-\newtheorem{conjecture}[theorem]{Conjecture}
-\newtheorem{corollary}[]{Corollary}[chapter]
-\newtheorem{criterion}[theorem]{Criterion}
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{example}[theorem]{Example}
-\newtheorem{exercise}[theorem]{Exercise}
-\newtheorem{lemma}[]{Lemma}[chapter]
-\newtheorem{notation}[theorem]{Notation}
-\newtheorem{problem}[theorem]{Problem}
-\newtheorem{proposition}[]{Proposition}[chapter]
-\newtheorem{remark}[]{Remark}[chapter]
-\newtheorem{solution}[theorem]{Solution}
-\newtheorem{summary}[theorem]{Summary}
-\newtheorem{assumption}[]{Assumption}[chapter]
-\renewcommand{\theequation}{\thesection.\arabic{equation}}
 \renewcommand{\baselinestretch}{1}
-\newcommand{\It}{\mbox{\( \iota_t\)}}
-\def \stackunder#1#2{\mathrel{\mathop{#2}\limits_{#1}}}
-\newfont{\bbf}{cmbx12 scaled 1435}
-\newenvironment{nbeq}{\addtocounter{equation}{1} (\theequation) \ $}{$\ }
-\newtheorem{hp}{Assumption}
-\renewcommand{\thehp}{\Alph{hp}}
-\renewcommand{\theenumi}{\roman{enumi}}
-\renewcommand{\theenumii}{\theenumi.\alph{enumii}}
-\renewcommand{\theequation}{\thesection.\arabic{equation}}
-\newcommand{\eop}{\hspace*{\fill} \ensuremath{\Box}}
-\definecolor{Gray}{gray}{0.9}
-
-\makeatletter
-\newtheorem*{rep@theorem}{\rep@title}
-\newcommand{\newreptheorem}[2]{%
-\newenvironment{rep#1}[1]{%
-\def\rep@title{#2 \ref{##1}}%
-\begin{rep@theorem}}%
-{\end{rep@theorem}}}
-\makeatother
-
+\usepackage{charter}
 %******************************************************
-
 \usepackage{float}
 \usepackage{footmisc}
 \usepackage{array}
 \usepackage{booktabs}
 \usepackage{tabularx} 
 \usepackage{rotating}
-\newcolumntype{R}{>{\raggedleft\arraybackslash}X}
-\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
-
 \usepackage{sectsty}
 \usepackage{floatrow}
 \usepackage{caption}
 \usepackage[round]{natbib}
-\newcommand{\pc}{\possessivecite}
-\newcommand{\ca}{\citeaffixed}
-\newcommand{\cy}{\citeyear*}
-\newcommand{\To}{\longrightarrow}
-\newcommand{\diag}{\mbox{diag}}
-\newcommand{\plim}{\mbox{plim}}
-\newcommand{\Exp}{\mathbb{E}}
-\newcommand{\Var}{\mbox{Var}}
-\newcommand{\Cov}{\mbox{Cov}}
-\newcommand{\qvar}[1]{\left\langle#1\right\rangle}
-\newcommand{\abs}[1]{\left\vert#1\right\vert}
-\newcommand{\bs}{\boldsymbol}
-\newcommand{\dd}[1]{\,\mathrm{d}#1}
-\setlength{\arraycolsep}{0.02in}
-%% -----------------------------%%%%%%%%%%%%%%%%%%%%%%%
-
 \usepackage{appendix}
 \usepackage{chngcntr}
 \usepackage{etoolbox}
 \usepackage{lipsum}
 
-\AtBeginEnvironment{subappendices}{%
-\section*{Appendix}
-}
+\newcommand{\E}{\mathbb{E}}
+\newcommand{\var}{\mbox{Var}}
+\newcommand{\cov}{\mbox{Cov}}
+\setlength{\arraycolsep}{0.02in}
 
+\AtBeginEnvironment{subappendices}{
+\section*{Appendix}}
 %******************************************************
 
 \title{Essays on the Economics of Heterogeneity}
@@ -124,24 +55,21 @@
   \author{\href{}{NILS-HOLGER GUDAT}}
   \collegeordept{\href{}{School of Economics and Finance}}
   \university{\href{}{Queen Mary, University of London}}
-
- 
   \author{NILS-HOLGER GUDAT}
   \collegeordept{School of Economics and Finance}
   \university{Queen Mary, University of London}
 \fi
 \degree{Doctor of Philosophy (Ph.D.) in Economics}
 
-
 % turn of those nasty overfull and underfull hboxes
 \hbadness=10000
 \hfuzz=50pt
-
 \doublespacing
-
 \pretolerance=10000
 \tolerance=2000
 \emergencystretch=10pt
+
+\usepackage{hyperref} 
 
 \begin{document}
 \pagenumbering{gobble} %do not put page number on front page
@@ -150,9 +78,7 @@
 \pagenumbering{arabic} %must put after because of gobble to avoid numbering title page
 
 \include{Dedication/dedication}
-
 \include{Declaration/declaration}
-
 \include{Acknowledgements/acknowledgements}
 
 \begin{abstractslong}
@@ -161,7 +87,6 @@
 
 %set the number of sectioning levels that get number and appear in the contents
 \setcounter{secnumdepth}{2} %number sections and subsections
-
 \setcounter{tocdepth}{1}
 
 \begin{spacing}{1.3}
@@ -175,17 +100,20 @@
 
 \chapter{Introduction} %preface is not numbered
 \markboth{\MakeUppercase{\thechapter. INTRODUCTION}}{INTRODUCTION}
-\include{introduction/introduction}
+\include{introduction/introduction} \ref{sec:conclusion}
 
 \chapter{Models of the wealth distribution} %\label{chap:atsm} 
 \markboth{\MakeUppercase{\thechapter. WEALTH DISTRIBUTION MODELS}}{WEALTH DISTRIBUTION MODELS} 
-\include{Chapter1/chapter1} %directory and name of file that contains the contant of the chapter
+\include{chapter1/chapter1}
 
-\chapter{The implications of learning about income processes in the face of structural breaks for the household wealth distribution} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
+\chapter{The effects of profile heterogeneity on estimates of income risk} \markboth{\MakeUppercase{\thechapter. PROFILE HETEROGENEITY AND INCOME RISK}}{PROFILE HETEROGENEITY AND INCOME RISK}
 \include{chapter2/chapter2}
 
-\chapter{The competitive effects of trade liberalisation in North America: An empirical application of the Melitz and Ottaviano Model} \markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} %chapter title printed on the header, preceded by chapter number
-\include{chapter3/chapter3} %directory and name of file that contains the contant of the chapter
+\chapter{The implications of learning about income processes in the face of structural breaks for the household wealth distribution} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
+\include{chapter3/chapter3}
+
+\chapter{The competitive effects of trade liberalisation in North America: An empirical application of the Melitz and Ottaviano Model} \markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} 
+\include{chapter4/chapter4} 
 
 \chapter{Conclusion} %preface is not numbered
 \markboth{\MakeUppercase{\thechapter. CONCLUSION }}{CONCLUSION}
