Get exceptions down to manageable level

--- a/CUEDthesisPSnPDF.cls.tex
+++ b/CUEDthesisPSnPDF.cls.tex
@@ -44,7 +44,7 @@
 \usepackage[english]{babel}
 \usepackage[usenames, dvipsnames]{color}
 %\usepackage[perpage]{footmisc}
-\usepackage[round,authoryear]{natbib}
+\usepackage[round]{natbib}
 \usepackage{ifthen}
 \usepackage{ifpdf}
 
@@ -156,17 +156,17 @@
 \setlength{\textwidth}{14.5cm}
 \setlength{\marginparsep}{1mm}
 \setlength{\marginparwidth}{3cm}
-\setlength{\footskip}{2.36cm}
+\setlength{\skip}{2.36cm}
 
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{\thechapter. #1 }}{}}
 \renewcommand{\sectionmark}[1]{}
 \fancyhf{}
 \fancyhead[RO]{\bfseries\rightmark}
-%\fancyhead[LE]{\bfseries\leftmark}
-\fancyfoot[C]{\thepage}
+\fancyhead[LE]{\bfseries\leftmark}
+%\fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
-\renewcommand{\footrulewidth}{0pt}
+%\renewcommand{\footrulewidth}{0pt}
 \addtolength{\headheight}{0.5pt}
 \fancypagestyle{plain}{
   \fancyhead{}
@@ -203,8 +203,8 @@
 %define title page layout
 \renewcommand{\maketitle}{%
 \begin{alwayssingle}
-    \renewcommand{\footnotesize}{\small}
-    \renewcommand{\footnoterule}{\relax}
+    %\renewcommand{\footnotesize}{\small}
+    %\renewcommand{\footnoterule}{\relax}
     \thispagestyle{empty}
 %  \null\vfill
   \begin{center}
@@ -241,6 +241,14 @@
   \begin{quote} \begin{center}}
 {\end{center} \end{quote} \end{alwayssingle}}
 
+
+% Declaration
+%
+% The acknowledgements environment puts a large, bold, centered 
+% "Acknowledgements" label at the top of the page. The acknowledgements
+% themselves appear in a quote environment, i.e. tabbed in at both sides, and
+% on its own page.
+
 \newenvironment{declaration}
 {\pagestyle{empty}
 \begin{alwayssingle}
@@ -266,56 +274,30 @@
 \vspace{0.5cm}\begin{quote}}
 {\end{quote}\end{alwayssingle}}
 
-% ACKNOWLEDGEMENTS
-%
-% The acknowledgements environment puts a large, bold, centered 
-% "Acknowledgements" label at the top of the page. The acknowledgements
-% themselves appear in a quote environment, i.e. tabbed in at both sides, and
-% on its own page.
-
-%\newenvironment{acknowledgements}
-%{\pagestyle{plain}}
-%\begin{alwayssingle}
-%\begin{center}
-%\vspace*{1.5cm}
-%{\Large \bfseries Acknowledgements}
-%\end{center}
-%\vspace{0.5cm}
-%\begin{quote}}
-%{\end{quote}\end{alwayssingle}}
-
-    \newenvironment{acknowledgements}
-    {\begin{alwayssingle} \thispagestyle{empty}
-    \begin{center}
-    \vspace*{1.5cm}
-    {\huge \bfseries Acknowledgements}
-    \end{center}
-    \vspace{0.5cm}
-    \begin{quote}}
-    {\end{quote}\end{alwayssingle}}
+\newenvironment{acknowledgements}
+{\pagestyle{empty}
+\begin{alwayssingle}
+\begin{center}
+\vspace*{1.5cm}
+{\Large \bfseries Acknowledgements}
+\end{center}
+\vspace{0.5cm}
+\begin{quote}}
+{\end{quote}\end{alwayssingle}}
 
 % The acknowledgementslong environment puts a large, bold, centered 
 % "Acknowledgements" label at the top of the page. The acknowledgement itself 
 % does not appears in a quote environment so you can get more in.
 
-%\newenvironment{acknowledgementslong}
-%{}
-%{\begin{alwayssingle}
-%\begin{center}
-%\vspace*{1.5cm}
-%{\Large \bfseries Acknowledgements}
-%\end{center}
-%\vspace{0.5cm}\begin{quote}}
-%{\end{quote}\end{alwayssingle}}
-
 \newenvironment{acknowledgementslong}
-{\begin{alwayssingle} \thispagestyle{empty}
+{\pagestyle{empty}
+\begin{alwayssingle}
 \begin{center}
 \vspace*{1.5cm}
 {\Large \bfseries Acknowledgements}
 \end{center}
-\vspace{0.5cm}}
-{\end{alwayssingle}}
+\vspace{0.5cm}\begin{quote}}
+{\end{quote}\end{alwayssingle}}
 
 %ABSTRACT
 %
@@ -336,7 +318,7 @@
 %the top of the page. The abstract itself does not appears in a quote
 %environment so you can get more in.
 
-\newenvironment{abstractslong} {\begin{alwayssingle} 
+\newenvironment{abstractslong} {\begin{alwayssingle} \pagestyle{empty}
   \begin{center}
   \vspace*{1.5cm}
   {\Large \bfseries  Abstract}
