--- a/main file.tex
+++ b/main file.tex
@@ -1,5 +1,5 @@
 \RequirePackage{setspace}
-\documentclass[oneside,12pt,a4paper]{Classes/CUEDthesisPSnPDF}
+\documentclass[oneside,12pt,a4paper]{CUEDthesisPSnPDF}
 \usepackage{longtable}
 \usepackage{lscape}
 \usepackage{amssymb}
@@ -26,7 +26,7 @@
 \usepackage{charter}
 %******************************************************
 \usepackage{float}
-\usepackage{footmisc}
+%\usepackage{footmisc}
 \usepackage{array}
 \usepackage{booktabs}
 \usepackage{tabularx} 
