Check whether capitalization matters

--- a/main file.tex
+++ b/main file.tex
@@ -104,7 +104,7 @@
 
 \chapter{Models of the wealth distribution} %\label{chap:atsm} 
 \markboth{\MakeUppercase{\thechapter. WEALTH DISTRIBUTION MODELS}}{WEALTH DISTRIBUTION MODELS} 
-\import{chapter1/}{chapter1}
+\import{Chapter1/}{chapter1}
 
 \chapter{The effects of profile heterogeneity on estimates of income risk} \markboth{\MakeUppercase{\thechapter. PROFILE HETEROGENEITY AND INCOME RISK}}{PROFILE HETEROGENEITY AND INCOME RISK}
 \import{chapter2/}{chapter2}
