Adding epsfig package includes graphics

--- a/main file.tex
+++ b/main file.tex
@@ -9,6 +9,8 @@
 \usepackage{titlesec}
 \usepackage{amsfonts}
 \usepackage{graphicx}
+\usepackage{epsfig}
+\usepackage{epstopdf}
 \setcounter{MaxMatrixCols}{30}
 \usepackage{tabu}
 \usepackage{setspace}
