--- a/main file.tex
+++ b/main file.tex
@@ -5,6 +5,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{multicol}
 \usepackage{geometry}
 \usepackage{titlesec}
 \usepackage{amsfonts}
@@ -104,17 +105,18 @@
 \markboth{\MakeUppercase{\thechapter. INTRODUCTION}}{INTRODUCTION}
 \import{introduction/}{introduction}
 
-\chapter{Models of the wealth distribution} %\label{chap:atsm} 
+\chapter{Quantitative Models of the Wealth Distribution}\label{ch:wealthmodels} 
 \markboth{\MakeUppercase{\thechapter. WEALTH DISTRIBUTION MODELS}}{WEALTH DISTRIBUTION MODELS} 
 \import{Chapter1/}{chapter1}
 
-\chapter{The effects of profile heterogeneity on estimates of income risk} \markboth{\MakeUppercase{\thechapter. PROFILE HETEROGENEITY AND INCOME RISK}}{PROFILE HETEROGENEITY AND INCOME RISK}
+\chapter{The Effects of Profile Heterogeneity on Estimates of Income Risk}\label{ch:income}
+\markboth{\MakeUppercase{\thechapter. PROFILE HETEROGENEITY AND INCOME RISK}}{PROFILE HETEROGENEITY AND INCOME RISK}
 \import{chapter2/}{chapter2}
 
-\chapter{The implications of learning about income processes in the face of structural breaks for the household wealth distribution} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
+\chapter{Wealth Distributions in Heterogeneous Income Process Models with Learning} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
 \import{chapter3/}{chapter3}
 
-\chapter{The competitive effects of trade liberalisation in North America: An empirical application of the Melitz and Ottaviano Model} \markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} 
+\chapter{The Competitive Effects of Trade Liberalisation in North America: An Empirical Application of the Melitz and Ottaviano Model} \markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} 
 \import{chapter4/}{chapter4} 
 
 \chapter{Conclusion} %preface is not numbered
