--- a/Declaration/declaration.tex
+++ b/Declaration/declaration.tex
@@ -1,7 +1,5 @@
-% Thesis Declaration ------------------------------------------------
-
 \begin{onehalfspacing}
-%\begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
+
 \begin{declaration}      %this creates the heading for the acknowlegments
 
 \thispagestyle{plain}
@@ -19,25 +17,12 @@ I confirm that this thesis has not been previously submitted for the award of a 
 The copyright of this thesis rests with the author and no quotation from it or information derived from it may be published without the prior written consent of the author.\\
 
 \textbf{Details of collaboration and publications:}\\
-Parts of Chapter 4 were undertaken as joint work with Ryan Weldzius.\\
+Parts of Chapter \ref{ch:trade} were undertaken as joint work with Ryan Weldzius (University of California, Los Angeles).\\
 
+\textbf{Signature:} Nils-Holger Gudat \\
+\textbf{Date:} \today
 
-\textbf{Signature:} Nils-Holger Gudat\\
-\textbf{Date:} 28th of July, 2014
-
-%No part of this doctoral thesis, titled as ``Essays on term structure models'' and submitted to the University of London in pursuance of the degree of Doctor of Philosophy (Ph.D.) in Economics, has been presented to any university for any degree.\\
-%I certify that the thesis I have presented for examination is solely my own work other than where I have clearly indicated that it is the work of others (in which case the extent of any work carried out jointly by me and any other person is clearly identified in it). The copyright of this thesis rests with the author. Quotation from it is permitted, provided that full acknowledgement is made. This thesis may not be reproduced without my prior written consent. I warrant that this authorisation does not, to the best of my belief, infringe the rights of any third party. \vspace{0.3cm}
-%
-%I declare that my thesis consists of XXXXXXXXX words.\\
-%
-%\textbf{Statement of conjoint work}
-%
-%Parts of Chapter 4 were undertaken as joint work with Professor Andrea Carriero and Elisabetta Vangelista.
-%\\\\
-%
-%\textbf{Signed}
-%\\\\
-%Sarah Mouabbi 
 
 \end{declaration}
+
 \end{onehalfspacing}
