--- a/main file.tex
+++ b/main file.tex
@@ -101,7 +101,7 @@
 	\listoffigures
 \end{spacing}
 
-\chapter{Introduction} %preface is not numbered
+\chapter{Introduction}\label{ch:intro} %preface is not numbered
 \markboth{\MakeUppercase{\thechapter. INTRODUCTION}}{INTRODUCTION}
 \import{introduction/}{introduction}
 
@@ -113,13 +113,15 @@
 \markboth{\MakeUppercase{\thechapter. PROFILE HETEROGENEITY AND INCOME RISK}}{PROFILE HETEROGENEITY AND INCOME RISK}
 \import{chapter2/}{chapter2}
 
-\chapter{Wealth Distributions in Heterogeneous Income Process Models with Learning} \markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
+\chapter{Wealth Distributions in Heterogeneous Income Process Models with Learning}\label{ch:learning}
+\markboth{\MakeUppercase{\thechapter. LEARNING AND THE WEALTH DISTRIBUTION}}{LEARNING AND THE WEALTH DISTRIBUTION}
 \import{chapter3/}{chapter3}
 
-\chapter{The Competitive Effects of Trade Liberalisation in North America: An Empirical Application of the Melitz and Ottaviano Model} \markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} 
+\chapter{The Competitive Effects of Trade Liberalisation in North America: An Empirical Application of the Melitz and Ottaviano Model}\label{ch:trade}
+\markboth{\MakeUppercase{\thechapter. TRADE AND PRODUCTIVITY}}{TRADE AND PRODUCTIVITY} 
 \import{chapter4/}{chapter4} 
 
-\chapter{Conclusion} %preface is not numbered
+\chapter{Conclusion}\label{ch:conclusion} %preface is not numbered
 \markboth{\MakeUppercase{\thechapter. CONCLUSION }}{CONCLUSION}
 \import{conclusion/}{conclusion}
 
