--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -73,18 +73,20 @@
 }
 
 
-@TechReport{AguiarBils2011,
-  author = {Mark A. Aguiar and Mark Bils},
-  title = {Has Consumption Inequality Mirrored Income Inequality?},
-  year = 2011,
-  month = Feb,
-  institution = {National Bureau of Economic Research, Inc},
-  type = {NBER Working Papers},
-  url = {http://ideas.repec.org/p/nbr/nberwo/16807.html},
-  number = {16807},
-  abstract = {We revisit to what extent the increase in income inequality over the last 30 years has been mirrored by consumption inequality. We do so by constructing two alternative measures of consumption expenditure, using data from the Consumer Expenditure Survey (CE). We first use reports of active savings and after tax income to construct the measure of consumption implied by the budget constraint. We find that the consumption inequality implied by savings behavior largely tracks income inequality between 1980 and 2007. Second, we use a demand system to correct for systematic measurement error in the CE's expenditure data. Specifically, we consider trends in the relative expenditure of high income and low income households for different goods with different income (total expenditure) elasticities. Our estimation exploits the difference in the growth rate of luxury consumption inequality versus necessity consumption inequality. This \&quot;double-differencing,'' which we implement in a a regression framework, corrects for mis-measurement that can systematically vary over time by good and income group. This second exercise indicates that consumption inequality has closely tracked income inequality over the period 1980-2007. Both of our measures show a significantly greater increase in consumption inequality than what is obtained from the CE's total household expenditure data directly.},
-  keywords = {}
+@Article{AguiarBils2015,
+  author={Mark Aguiar and Mark Bils},
+  title={{Has Consumption Inequality Mirrored Income Inequality?}},
+  journal={American Economic Review},
+  year=2015,
+  volume={105},
+  number={9},
+  pages={2725-56},
+  month={September},
+  keywords={},
+  abstract={We revisit to what extent the increase in income inequality since 1980 was mirrored by consumption inequality. We do so by constructing an alternative measure of consumption expenditure using a demand system to correct for systematic measurement error in the Consumer Expenditure Survey. Our estimation exploits the relative expenditure of high- and low-income households on luxuries versus necessities. This double differencing corrects for measurement error that can vary over time by good and income. We find consumption inequality tracked income inequality much more closely than estimated by direct responses on expenditures. (JEL D31, D63, E21)},
+  url={http://ideas.repec.org/a/aea/aecrev/v105y2015i9p2725-56.html}
 }
+
 
 @TechReport{AguiarHurst2005,
   author = {Mark Aguiar and Erik Hurst},
@@ -1787,6 +1789,36 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
   url = {http://ideas.repec.org/a/red/issued/08-75.html}
 }
 
+@TechReport{BadelHuggett2014,
+  author={Badel, Alejandro and Huggett, Mark},
+  title={{Taxing top earners: a human capital perspective}},
+  year=2014,
+  month=Jul,
+  institution={Federal Reserve Bank of St. Louis},
+  type={Working Papers},
+  url={http://ideas.repec.org/p/fip/fedlwp/2014-017.html},
+  number={2014-17},
+  abstract={We assess the consequences of substantially increasing the marginal tax rate on U.S. top earners using a human capital model. The top of the model Laffer curve occurs at a 53 percent top tax rate. Tax revenues and the tax rate at the top of the Laffer curve are smaller compared to an otherwise similar model that ignores the possibility of skill change in response to a tax reform. We also show that if one applies the methods used by Diamond and Saez (2011) to provide quantitative guidance for setting the tax rate on top earners to model data then the resulting tax rate exceeds the tax rate at the top of the model Laffer curve.},
+  keywords={Human Capital; Marginal Tax Rates; Inequality; Laffer Curve},
+}
+
+@Article{GuisoHaliassosJiappeli2003,
+  author={Luigi Guiso and Michael Haliassos and Tullio Jappelli},
+  title={{Household stockholding in Europe: where do we stand and where do we go?}},
+  journal={Economic Policy},
+  year=2003,
+  volume={18},
+  number={36},
+  pages={123-170},
+  month={04},
+  keywords={},
+  abstract={ We discuss the current state of stockownership among households in major European countries, drawing parallels and contrasts with the US experience. Our analysis of detailed microeconomic data documents increasing stock market participation and persistent differences across countries in our sample: many more US, UK and Swedish households participate in the stock market than is the case in the Netherlands and, especially, in France, Germany, and Italy. At the individual household level, the data indicate that stock market participation correlates robustly with wealth and education, which have only small effects, however, on the asset share invested in stocks by households who do participate. These empirical results point to the relevance of participation costs, and we find that indicators of such costs are consistent with the observed pattern of participation across countries. Over time, higher participation was brought about by lower participation costs. We discuss the possible impact of market entry by households with different characteristics, and outline types of policies that could mitigate any undesirable stock market effects of cheaper and broader participation. Copyright (c) CEPR, CES, MSH, 2003..},
+  url={http://ideas.repec.org/a/bla/ecpoli/v18y2003i36p123-170.html}
+}
+
+
+
+
 @Article{HuggettVenturaYaron2006,
   author = {Huggett, Mark and Ventura, Gustavo and Yaron, Amir},
   title = {Human capital and earnings distribution dynamics},
@@ -1818,6 +1850,22 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
   year = {2013},
   note = {Working Paper}
 }
+
+@Article{Hryshko2012,
+  author={Dmytro Hryshko},
+  title={{Labor income profiles are not heterogeneous: Evidence from income growth rates}},
+  journal={Quantitative Economics},
+  year=2012,
+  volume={3},
+  number={2},
+  pages={177-209},
+  month={07},
+  keywords={},
+  abstract={No abstract is available for this item.},
+  url={http://ideas.repec.org/a/ecm/quante/v3y2012i2p177-209.html}
+}
+
+
 
 @Article{Iacoviello2005,
   author = {Matteo Iacoviello},
@@ -2202,6 +2250,14 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
 }
 
 
+@misc{Oswald2014,
+  author = {Florian Oswald},
+  title = {High Dimensional Function Approximation in Julia},
+  howpublished = {\url{https://github.com/floswald/ApproXD.jl}},
+  year = {2014}
+}
+
+
 @incollection{Piketty2008,
   author = {Thomas Piketty},
   title = {Wealth Taxation in the 21st Century: A Personal View},
@@ -2423,6 +2479,23 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
 }
 
 
+@Article{SiegelThaler1997,
+  author={Jeremy J. Siegel and Richard H. Thaler},
+  title={{Anomalies: The Equity Premium Puzzle}},
+  journal={Journal of Economic Perspectives},
+  year=1997,
+  volume={11},
+  number={1},
+  pages={191-200},
+  month={Winter},
+  keywords={},
+  abstract={The equity premium is the difference in returns between equities and fixed income securities, such as Treasury bills. The puzzle refers to the fact that the premium has historically been very large--about 6 percent per year--too large to be easily explained by risk aversion. The authors document the evidence for the puzzle and find that is exists in many countries, over long time periods, and does not seem to be explained by survivorship bias. They also summarize several theoretical explanations. The authors conclude that it is difficult to explain the equity premium without incorporating some kind of irrationality.},
+  url={http://ideas.repec.org/a/aea/jecper/v11y1997i1p191-200.html}
+}
+
+
+
+
 @Book{Slesnick2001,
   author = {Slesnick,Daniel T.},
   title = {Consumption and Social Welfare},
@@ -2508,6 +2581,22 @@ url = {http://EconPapers.repec.org/RePEc:nbr:nberbk:frie57-1}
   abstract = {In his widely discussed book \&quot;Fault Lines\&quot; (2010), Raghuram Rajan argues that many U.S. consumers have reacted to the decline in their relative permanent incomes since the early 1980s by reducing saving and increasing debt. This has temporarily kept private consumption and thus aggregate demand and employment high, despite stagnating incomes for many households. But it also contributed to the creation of a credit bubble, which eventually burst, and a large current account deficit in the United States. We place the Rajan hypothesis in the context of competing theories of consumption, and survey the empirical literature on the effects of inequality on household behaviour beyond the largely anecdotal evidence provided in Rajan (2010). We argue that the Rajan hypothesis, supported by the empirical evidence, calls for a renaissance of the relative income hypothesis of consumption.},
   keywords = {Great Recession; income inequality; household dept; consumpion theory}
 }
+
+
+@TechReport{Vermeulen2014,
+  author={Vermeulen, Philip},
+  title={{How fat is the top tail of the wealth distribution?}},
+  year=2014,
+  month=Jul,
+  institution={European Central Bank},
+  type={Working Paper Series},
+  url={http://ideas.repec.org/p/ecb/ecbwps/20141692.html},
+  number={1692},
+  abstract={The US Survey of Consumer Finances (SCF) and the Eurosystem’s Household Finance and Consumption Survey (HFCS) provide evidence that wealth is heavily concentrated at the upper tail of the wealth distribution. A commonly cited number for the US is that 1 percent of the households hold 30 percent of total household wealth. I investigate the reliability of upper tail wealth estimates from household wealth surveys in the presence of survey differential non-response, i.e. the fact that richer households have lower response rates than poorer households. Differential non-response can often not be remedied by adjustment of survey weights, as wealth of the non-responding households remains unobserved. Differential non-response biases tail wealth estimates downwards. Monte Carlo evidence shows that such a bias can be quite substantial. I provide a method that greatly reduces the bias. The method combines survey data with data from rich lists and uses them jointly to estimate a Pareto (power-law) distribution for tail wealth. Using this method, the paper combines the SCF and HFCS data with Forbes World’s billionaires data to provide new estimates of tail wealth. For surveys with low or no oversampling of the wealthy, these estimates tend to indicate a higher concentration of wealth at the top than those calculated from the wealth surveys alone. JEL Classification: D31},
+  keywords={household finance and consumption survey; power law; survey of consumer finances; wealth distributio},
+}
+
+
 
 @TechReport{Wolff2010,
   author = {Wolff, Edward N.},
@@ -3246,4 +3335,11 @@ pages = {870--895},
 title = {{The Long and Short of the Canada-U.S. Free Trade Agreement}},
 volume = {94},
 year = {2004}
+}
+
+@misc{Townsend2015,
+  author = {Townsend, A.},
+  title = {FastGaussQuadrature.jl},
+  howpublished = {\url{https://github.com/ajt60gaibb/FastGaussQuadrature.jl} (GitHub repository)},
+  year = {2015}
 }
