--- a/gw_price_lr.tex
+++ b/gw_price_lr.tex
@@ -1,64 +1,46 @@
 
-% Table created by stargazer v.5.0 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Thu, Apr 24, 2014 - 19:57:46
-\begin{tabular}{@{\extracolsep{5pt}}lcccc} 
+% Table created by stargazer v.5.1 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Mon, Sep 28, 2015 - 15:50:56
+\begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
- & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
-\cline{2-5} 
-\\[-1.8ex] & \multicolumn{4}{c}{$\Delta \log \left(\frac{p_t}{p_t^*} \right)$} \\ 
-\\[-1.8ex] & (1) & (2) & (3) & (4)\\ 
+ & \multicolumn{6}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-7} 
+\\[-1.8ex] & \multicolumn{6}{c}{$\Delta \log \left(\frac{p_t}{p_t^*} \right)$} \\ 
+\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- $\Delta \log \tau_t$ & $-$0.0004 & $-$0.001 & 0.0003 & $-$0.001 \\ 
-  & (0.001) & (0.001) & (0.001) & (0.001) \\ 
-  & & & & \\ 
- $\Delta \log \tau_t^*$ & $-$0.002$^{*}$ & $-$0.002 & $-$0.003$^{**}$ & $-$0.003$^{*}$ \\ 
-  & (0.001) & (0.001) & (0.001) & (0.001) \\ 
-  & & & & \\ 
- $\Delta \log \theta$ &  &  & $-$0.048$^{***}$ & $-$0.049$^{***}$ \\ 
-  &  &  & (0.011) & (0.012) \\ 
-  & & & & \\ 
- $\Delta \log \theta^*$ &  &  & 0.040$^{*}$ & 0.071$^{**}$ \\ 
-  &  &  & (0.020) & (0.033) \\ 
-  & & & & \\ 
- $\Delta \log D_t$ & 0.013 & 0.031$^{*}$ & 0.011 & 0.043$^{**}$ \\ 
-  & (0.016) & (0.019) & (0.016) & (0.018) \\ 
-  & & & & \\ 
- $\Delta \log D_t^*$ & $-$0.040 & $-$0.031 & $-$0.025 & $-$0.030 \\ 
-  & (0.091) & (0.104) & (0.091) & (0.106) \\ 
-  & & & & \\ 
- $\log \left(\frac{p_{t-1}}{p_{t-1}^*} \right)$ & $-$0.279$^{***}$ & $-$0.263$^{***}$ & $-$0.270$^{***}$ & $-$0.233$^{***}$ \\ 
-  & (0.011) & (0.013) & (0.014) & (0.021) \\ 
-  & & & & \\ 
- $\log \tau_{t-1}$ & 0.001 & 0.001 & 0.002$^{*}$ & 0.001 \\ 
-  & (0.001) & (0.001) & (0.001) & (0.002) \\ 
-  & & & & \\ 
- $\log \tau_{t-1}^*$ & $-$0.002$^{*}$ & $-$0.002 & $-$0.003$^{***}$ & $-$0.002 \\ 
-  & (0.001) & (0.002) & (0.001) & (0.002) \\ 
-  & & & & \\ 
- $\log \theta_{t-1}$ &  &  & $-$0.012$^{**}$ & $-$0.005 \\ 
-  &  &  & (0.006) & (0.011) \\ 
-  & & & & \\ 
- $\log \theta_{t-1}^*$ &  &  & 0.012$^{**}$ & 0.017 \\ 
-  &  &  & (0.006) & (0.025) \\ 
-  & & & & \\ 
- $\log D_{t-1}$ & 0.0004 & 0.040$^{**}$ & 0.003 & 0.069$^{***}$ \\ 
-  & (0.005) & (0.020) & (0.005) & (0.021) \\ 
-  & & & & \\ 
- $\log D_{t-1}^*$ & 0.001 & 0.088$^{*}$ & $-$0.0005 & 0.082$^{*}$ \\ 
-  & (0.004) & (0.045) & (0.004) & (0.045) \\ 
-  & & & & \\ 
- $\log L_{t-1}$ & $-$0.082 & $-$0.175 & $-$0.135 & $-$0.323$^{**}$ \\ 
-  & (0.150) & (0.156) & (0.148) & (0.160) \\ 
-  & & & & \\ 
- $\log L_{t-1}^*$ & 0.061 & 0.132 & 0.128 & 0.251 \\ 
-  & (0.152) & (0.153) & (0.151) & (0.154) \\ 
-  & & & & \\ 
+ $\Delta \log \tau_t$ & $-$0.002 & 0.0001 & $-$0.009 & 0.004 & $-$0.008 & 0.005 \\ 
+  & (0.002) & (0.002) & (0.011) & (0.004) & (0.006) & (0.003) \\ 
+  & & & & & & \\ 
+ $\Delta \log \tau_t^*$ & 0.0004 & 0.0003 & 0.004 & 0.001 & 0.003 & 0.001 \\ 
+  & (0.003) & (0.002) & (0.012) & (0.005) & (0.008) & (0.004) \\ 
+  & & & & & & \\ 
+ $\Delta \log D_t$ & 0.003 & 0.005 & 0.006 & 0.014 & 0.004 & 0.013 \\ 
+  & (0.007) & (0.008) & (0.009) & (0.019) & (0.010) & (0.020) \\ 
+  & & & & & & \\ 
+ $\Delta \log D_t^*$ & $-$0.011 & $-$0.007 & $-$0.014 & 0.241 & $-$0.010 & 0.094 \\ 
+  & (0.022) & (0.023) & (0.018) & (0.284) & (0.019) & (0.210) \\ 
+  & & & & & & \\ 
+ $\log \left(\frac{p_{t-1}}{p_{t-1}^*} \right)$ & $-$0.123$^{***}$ & $-$0.009 & $-$0.141$^{***}$ & $-$0.216$^{***}$ & $-$0.031 & $-$0.035 \\ 
+  & (0.024) & (0.021) & (0.041) & (0.052) & (0.031) & (0.046) \\ 
+  & & & & & & \\ 
+ $\log \tau_{t-1}$ & $-$0.006$^{**}$ & $-$0.003$^{**}$ & $-$0.014 & $-$0.005 & $-$0.012 & $-$0.003 \\ 
+  & (0.002) & (0.001) & (0.016) & (0.004) & (0.007) & (0.002) \\ 
+  & & & & & & \\ 
+ $\log \tau_{t-1}^*$ & 0.001 & 0.0003 & 0.008 & $-$0.001 & 0.007 & $-$0.00001 \\ 
+  & (0.003) & (0.001) & (0.016) & (0.005) & (0.007) & (0.001) \\ 
+  & & & & & & \\ 
+ $\log L_{t-1}$ & 0.237 & 0.068 & 0.383 & 0.638 & 0.210 & 0.323 \\ 
+  & (0.242) & (0.264) & (0.333) & (0.650) & (0.360) & (0.665) \\ 
+  & & & & & & \\ 
+ $\log L_{t-1}^*$ & $-$0.463$^{*}$ & $-$0.243 & $-$0.584$^{*}$ & $-$0.941 & $-$0.359 & $-$0.580 \\ 
+  & (0.253) & (0.276) & (0.350) & (0.680) & (0.377) & (0.694) \\ 
+  & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 324 & 324 & 320 & 320 \\ 
-R$^{2}$ & 0.731 & 0.751 & 0.753 & 0.776 \\ 
+Observations & 984 & 984 & 354 & 318 & 354 & 318 \\ 
+R$^{2}$ & 0.120 & 0.063 & 0.125 & 0.150 & 0.068 & 0.073 \\ 
 \hline 
 \hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
- & \multicolumn{4}{r}{Fixed effects for country pair} \\ 
+\textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+ & \multicolumn{6}{r}{Fixed effects for country pair} \\ 
 \end{tabular} 
