Add pages, more and more pages...

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,12 +1,73 @@
 \section{Motivation}
-Distributional questions are increasingly making a comeback in economics. 
-
+Distributional questions are increasingly making a comeback in economics. In spite
+of the famous -- or infamous -- warning of \citet{Lucas2004} that the focus 
+on questions of distribution is one of the most "seductive (...) and poisoning"
+tendencies in economics\footnote{In fairness it has to be said that Lucas' quote
+is often taken out of context, as he was not actually advising against studying 
+distributional issues entirely, but merely pointing out that economic growth has
+played a much more important role in raising people out of poverty than re-
+distribution of current resources at any point in time could have achieved.},
+many fields of economics that have long relied on simplistic models of representative
+households and firms have increasingly taken the issue of modelling heterogeneity
+across economic agents seriously. At the very least since the Great Recession
+triggered by the financial crisis of 2007--2008, issues of distribution have also
+taken centre stage in the public economic discourse. Work on the increase in 
+income inequality, especially at the top end of the income distribution, and 
+the rising inequality in wealth holdings in advanced economies has played a 
+prominent role in the public debate in recent years, the most prominent recent
+example being \citet{Piketty2014}, a rare instance of a book largely based on 
+economic scholarship being widely discussed and sold (if maybe not read) by
+a mainstream audience. However, while the public has only recently started to 
+take an interest in issues of inequality and distribution, the economic literature
+has been developing quantitative models of heterogeneity for almost three decades.
+Seminal papers such as \citet{Imrohoroglu1989}, \citet{Huggett1993}, and
+\citet{Aiyagari1994} have laid the groundwork for a vast literature explicitly 
+modelling the choices of heterogeneous agents based on microeconomic evidence.
+A major factor in the move towards models of explicit heterogeneity have been 
+the huge advancements in computer power in recent decades. With Moore's law
+still holding to this day, the transistor count of the fastest microprocessor
+today is about two-thousand times as high as that of the fastest microprocessor
+twenty-five years ago, when \citet{Zeldes1989} published one of the first works
+that numerically solved a household savings problem under uncertainty numerically.
+Besides enabling researchers to numerically solve ever more complex optimisation
+problems with state spaces of ever more dimensions, the advancements in computer
+power have also vastly improved data processing capabilities, a development that
+in turn has led to surge in empirical work exploiting large microeconomic data
+sets, the results of which can then be used to validate models of household
+and firm behaviour. \\
+The present work explores heterogeneity in two different classes of economic models,
+using both approaches outlined above. While the first part will build up towards
+a quantitative theoretical model of the wealth distribution, the merits of which
+will be evaluated against micro survey data. The second part will take the predictions
+of a micro-founded model of international trade and test them on data of firm 
+behaviour disaggregated at the industry-level. 
 
 \section{Outline}
-This thesis is structured as follows. Chapter 2 gives an overview of the research on theoretical models of the household wealth distribution in the last two decades. It will highlight the key empirical challenges by presenting stylized facts on the cross sectional wealth distribution in a number of countries and their evolution over time. Then, an overview of existing modelling approaches is presented,  
+This thesis is structured as follows. Chapter 2 gives an overview of the research 
+on theoretical models of the household wealth distribution in the last two decades. 
+It will highlight the key empirical challenges by presenting stylized facts on 
+the cross sectional wealth distribution in a number of countries and their 
+evolution over time. Then, an overview of existing modelling approaches is presented,  
 
-Chapter 3 builds on the discussion in Chapter 2 by constructing a model of learning about idiosyncratic income processes and using it to simulate wealth distributions. As a first step, income processes with profile heterogeneity are estimated for different sub-periods of PSID data from 1968 to 1999 and from BHPS data in order to assess the stability of the cross-sectional variance of income growth rates across time and labour markets. The estimates are then used as inputs in a structural model of household saving first employed by \citet{Guvenen2007}, with the addition of both structural breaks in the cross-sectional variance of growth rates and habits in consumption. The models predictions for the evolution of the US consumer wealth distribution are then benchmarked against data from the Survey of Consumer Finances. 
+Chapter 3 builds on the discussion in Chapter 2 by constructing a model of 
+learning about idiosyncratic income processes and using it to simulate wealth 
+distributions. As a first step, income processes with profile heterogeneity are 
+estimated for different sub-periods of PSID data from 1968 to 2013 and from BHPS 
+data in order to assess the stability of the cross-sectional variance of income 
+growth rates across time and labour markets. The estimates are then used as inputs 
+in a structural model of household saving first employed by \citet{Guvenen2007}, 
+with the addition of both structural breaks in the cross-sectional variance of 
+growth rates and habits in consumption. The models predictions for the evolution
+of the US consumer wealth distribution are then benchmarked against data from the 
+Survey of Consumer Finances. 
 
-Chapter 4 gives a brief introduction into trade models based on firm-level heterogeneity, before developing an estimable model in the spirit of \citet{Chen2009}. The model is then tested on a data set of prices, productivity, and markups for nine manufacturing industries in the Canada, Mexico and the United States over the period of 1994 to 2010. In an extension of the approach of \citet{Chen2009}, we also conduct a sub-sample analysis in which we split the same into fixed and free entry industries, based on a measure of firm turnover developed on the basis of prior research. 
+Chapter 4 gives a brief introduction into trade models based on firm-level 
+heterogeneity, before developing an estimable model in the spirit of \citet{Chen2009}. 
+The model is then tested on a data set of prices, productivity, and markups for 
+nine manufacturing industries in the Canada, Mexico and the United States over 
+the period of 1988 to 2010. In an extension of the approach of \citet{Chen2009},
+ we also conduct a sub-sample analysis in which we split the same into fixed and 
+free entry industries, based on a measure of firm turnover developed on the basis 
+of prior research. 
 
 Chapter 5 concludes the thesis and discusses potential avenues for future research.
