--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -1,14 +1,79 @@
-Throughout this thesis, an outline of affine term structure models is provided. This particular class of term structure models has been made very popular in recent years due to its ability to capture the dynamics of yields both across their time series and cross-section and its ease in imposing the absence of arbitrage, allowing in turn the obtention of adaptable risk premia specifications. Affine term structure models have the advantage of allowing various extensions, in a wide range, to their basic primary setup, asserting their importance in the literature. However, difficulties do arise in their estimation and in the interpretation of the latent factors used. This thesis addresses both problems by utilizing a specific structure to the factor loadings, known as the Nelson-Siegel method. The estimation of this term structure model not only circumvents the global optimum issues but further provides some interpretation to the factors, given the level, slope and curvature factors of the Nelson-Siegel interpolation are not only intuitive in their nature, but also have reliable macroeconomic links.
+This thesis considered the effects of heterogeneity in economic models both 
+theoretically and empirically. It reviewed the recent literature on the 
+macroeconomics of household consumption and savings with agents that differ in 
+their economic situation because of only partially insurable shocks to their
+idiosyncratic income. After presenting the workhorse Aiyagari-Bewley-Imrohoroglu-
+Huggett model of consumption under uncertainty, various extensions to the model
+and their effects on the model's predictions are discussed. Amongst these are
+the introduction of additional assets such as housing, the consideration of 
+differing rates of return either because of different financial assets or because
+of entrepreneurial activity, an overlapping generations structure with bequest
+motives and institutional factors such as asset-based means testing for public
+insurance program. 
 
-The present thesis introduces and employs dynamic term structure models to macroeconomic and financial research questions. More precisely, this study initially pertains to financial markets by establishing a tie between interest rates and exchange rates. The study follows by concerning itself with macroeconomic objectives, by exploiting the relationship between yields and inflation.
+After noting that all models of the consumer wealth distribution rely on a 
+parsimonious AR(1) process with a persistent and transitory shock component, 
+the thesis moves on to consider the recent literature on estimating income 
+processes from the variance-covariance structure of earnings residuals. While
+this literature has a long tradition, recent work has renewed interest in the 
+estimation of processes in which the stochastic process for income features
+a deterministic trend component which varies across households. Chapter 
+\ref{ch:income} adds to this literature by considering the so far longest sample
+of the US PSID to estimate such processes, analyse their variation over time 
+by considering sub-periods of the full sample and for the first time estimating
+these processes from British data from the BHPS. It documents substantial 
+heterogeneity in the estimates obtained for different time periods and income
+definitions, although a common theme in the obtained estimates is that both the 
+persistence of the AR(1) component and the variance of its innovation are
+significantly lower than those estimated
+from processes without deterministic growth rate heterogeneity. 
 
-In a first instance, this study exploits a theoretical relationship between interest rates and exchange rates, namely the uncovered interest rate parity, with the aim to extract currency risk premia through a bilateral affine term structure model with stochastic volatility. The method proposed consists of developing an affine Arbitrage-Free class of dynamic Nelson-Siegel term structure models (AFNS) with stochastic volatility to obtain the domestic and foreign discount rate variations, which in turn are used to derive a representation of exchange rate depreciations. The manipulation of no-arbitrage restrictions allows to endogenously capture currency risk premia. The estimation exercise comprises of a state-space analysis using the Kalman filter. The imposition of the Dynamic Nelson-Siegel (DNS) structure allows for a tractable and robust estimation, offering significant computational benefits, whilst no-arbitrage restrictions enforce the model with theoretically appealing properties. Empirical findings suggest that estimated currency risk premia are able to account for the forward premium puzzle. 
+Building on these findings, chapter \ref{ch:learning} then used a life-cycle
+model of household saving based on an heterogeneous income process in which 
+households learn about their individual specific intercept and slope parameter
+over the course of their working life to simulate wealth distributions. It 
+showed that while learning is not important for the qualitative predictions 
+of the model regarding the shape of the wealth distribution, the key drivers
+in model fit are the persistence of the AR(1) process and its innovation variance,
+precisely those parameters that in chapter \ref{ch:income} were estimated to 
+be significantly lower under a HIP specification. The basic problem in fitting 
+the model to the data is that the HIP process assigns a large part of the 
+variability in household earning to the dispersion in growth rates, and a lower
+part to the permanent shock component. As permanent growth, in contrast to 
+persistent shocks, does not require asset accumulation for consumption smoothing,
+the lifetime income inequality created by inequality in deterministic growth 
+rates, does not lead to the large inequality in wealth holdings that inequality
+created by a volatile and persistent shock component in income does. As recent
+work points towards an HIP process as a good description of the actual income 
+risk facing households, the results of models offering a good fit to the wealth
+distribution based on a persistent AR(1) component with large innovation variance
+have to be questioned.
 
-In a second instance, inflation expectations and inflation risk premia are derived using a shadow rate class of term structure models. In response to the recent financial crisis, the Bank of England reduced short term interest rates to 0.5\%. With such low short term rates, traditional term structure models are likely to be inappropriate for estimating inflation expectations and risk premia, because expectations based on such models might implicitly violate the zero lower bound condition. In this segment both the nominal and real UK term structure of interest rates are studied, using the dynamic term structure model introduced by, which imposes the non-negativity of nominal short maturity rates. Estimates of the term premia, inflation risk premia and market-implied inflation expectations are provided. Findings indicate that the zero lower bound specification is necessary to reflect countercyclicality in nominal term premia projections and that medium and long term inflation expectations have been contained within narrower bounds since the early 1990s, suggesting monetary policy credibility after the introduction of inflation targeting.
+In chapter \ref{ch:trade}, the thesis then considers the effects of heterogeneity
+on the supply side of the economy by testing the predictions of a model of 
+international trade based on firms differing in their marginal productivity levels.
+Based on a sample of 64 industries in the three NAFTA member countries Canada,
+Mexico and USA, error correction models relating changes in the growth rate
+of tariff barriers, firms, and market size to changes in the growth rate of relative
+prices, productivities and markups are being estimated on country pairs. In an 
+extension of the previous literature, the chapter also considers the effects of
+market entry by constructing measures of firm turnover for each industry and 
+analysing samples of high- and low turnover industries separately, and considers
+the effects of third country tariff barriers on two trade partners. It finds
+support for the model's prediction regarding the effect of entry condition, 
+namely industries with free entry displaying a larger reaction to changes in 
+trade freeness in the long run, as well as a faster speed of adjustment. The
+effects of third country tariffs are absent in most specifications, a result
+that is likely to be due to the unfortunately less than complete tariff data 
+available for some parts of the sample. 
 
-For my future research projects, I wish to draw from the analysis and discussion of this thesis and elaborate further on this strand of the literature, this time emphasizing on the joint effect of monetary economics and finance on asset prices, financial markets and monetary policy. Two main perspectives emerge within my research agenda. A potential project, that inclines more towards macroeconomic concepts, consists in building an extension of the two above-mentioned models by constructing a Taylor rule type of model which would further extend to include growth. Furthermore, an alternative suggests to further exploit the interaction between macroeconomic and financial data to explore a gap in the literature. Specifically, the study includes providing an economic interpretation to the latent factors, used in the state-space representation, by venturing towards macro-finance models and high frequency data. This analysis is built on the prior belief that assets are affected by macroeconomic conditions but simultaneously suffer from microstructure phenomena. 
-
-Notwithstanding the extensions listed above, it is crucial to note that the most important message to draw from this thesis is that the literature on risk premia is still at its infancy due to the striking complexity involved in estimating an unobservable variable which nonetheless contains a very rich informational content. In turn, in future research, I wish to investigate the sensitivity of the price of risk, and consequently of risk premia, to different specifications in the mean reversion matrix of the states' dynamics. The aim is to determine a preferred specification for dynamic term structure models using a Bayesian shrinkage estimation approach.
-
-To conclude, this thesis builds a spherical account of the versatility of affine models by implementing them to distinct monetary finance applications. Several of the pending issues in the literature are addressed and the grounds for future interesting questions are paved. 
-
+Throughout the thesis it has become clear that heterogeneity has important effects
+on the predictions of economic models and is crucially important when applying 
+these models for policy analysis. At the same time, heterogeneity can be added
+in a variety of ways, many of which often help to explain similar patterns in the
+data. Here it is important to consider the effects of different dimensions of 
+heterogeneity simultaneously, to understand their interplay and avoid ascribing
+too large a role quantitatively to one specific mechanism. As computer power 
+continues to grow, more and more complex models of differences between economic
+agents will become feasible to solve, making heterogeneity in economics a fruitful
+area for future research. 
