updates updates updates

--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -2,8 +2,10 @@
 
 \thispagestyle{plain}
 
-\textit{To Nadien, who had to lift my spirits more than once over the last four years; \\ 
+\textit{To Nadien, who lifted my spirits more than once over the last four years 
+         and was more understanding and patient than anyone could hope for; \\ 
 				my mother, as I couldn't have made it here without her love and support; \\
-				and Emil, whose laugh carried me through the final stages of this project.}
+				and Emil, whose laugh carried me through the final stages of this project.\\
+                \begin{center}OMAHA!\end{center}}
 
 \end{dedication}
