--- a/main file.tex
+++ b/main file.tex
@@ -48,6 +48,7 @@
 \newcommand{\var}{\mbox{Var}}
 \newcommand{\cov}{\mbox{Cov}}
 \setlength{\arraycolsep}{0.02in}
+\renewcommand{\arraystretch}{1.5}
 
 \AtBeginEnvironment{subappendices}{
 \section*{Appendix}}
